# playground

./: README.md  pyproject.toml
agent_framework/: agent.py  config.py  langchain_tool_agent.py  llm_client.py  models.py  planner.py  prompts.py  skills.py  tools.py
app/: main.py
examples/: agent.config.yaml
examples/skills/planning-gateway-agent/: SKILL.md
examples/skills/qa-assistant/: SKILL.md
examples/skills/repo-assistant/: SKILL.md
scripts/: fetch_skills_docs_index.py
tests/: test_api.py  test_llm_client.py
