[project]
name = "lite-agent-framework"
version = "0.1.0"
description = "Offline-ready lightweight LLM agent framework with MCP/tool/prompt/skill support"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
  "langchain-openai>=0.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "agent_framework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
